fix to display head image correctly on ios devices

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -1,13 +1,12 @@
 // Styling for the masthead
 header.masthead {
-  width: 100%;
   max-height: 500px;
   margin-bottom: 30px;
   text-align: center;
 
   background-image: url("#{$header-image}");
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center center;
   background-size: cover;
 
@@ -51,6 +50,7 @@ header.masthead {
 @media (min-width: 768px) {
   header.masthead {
     max-height: 700px;
+    background-attachment: fixed;
     .intro-text {
       padding-top: 200px;
       padding-bottom: 200px;
